# fuel-route-optimizer

./: .gitignore  README.md  fuel_stations.json  main.py  pyproject.toml  requirements.txt
api/: index.py
apps/fuel/: apps.py  models.py
apps/fuel/management/commands/: geocode_cities.py  geocode_stations.py  import_fuel_prices.py  populate_cities.py
apps/fuel/migrations/: 0001_initial.py  0002_citycoordinate.py
apps/routing/: serializers.py  test_fuel_route.py  urls.py  views.py
apps/routing/services/: fuel_optimizer.py  geocode.py  geojson_builder.py  geospatial.py  route_processing.py  routing.py
fuel_route_planner/: settings.py  urls.py
